<resources>
    <string name="app_name">ShoeStore</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="sign_in">Sign Up</string>
    <string name="sign_up">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="next_screen">Next Screen</string>
    <string name="go_to_next_screen">Click into button below to go to the next screen</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fab_description">Navigate to the shoe detail screen</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>

    <string name="shoe_name_label">Name</string>
    <string name="shoe_name_hint">Enter a shoe name</string>
    <string name="shoe_company_label">Company</string>
    <string name="shoe_company_hint">Enter a shoe company name</string>
    <string name="shoe_size_label">Size</string>
    <string name="shoe_size_hint">Enter a shoe size</string>
    <string name="shoe_description_label">Description</string>
    <string name="shoe_description_hint">Enter a shoe description</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe">Shoe</string>
</resources>