<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".shoedetail.ShoeDetailFragment">

        <TextView
            android:id="@+id/shoe_name__text_view"
            style="@style/ShoeDetailTextView"
            android:text="@string/shoe_name_label"
            app:layout_constraintEnd_toStartOf="@+id/shoe_name__edit_text"
            app:layout_constraintStart_toStartOf="@+id/shoe_company__text_view"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_name__edit_text"
            style="@style/ShoeDetailEditText"
            android:hint="@string/shoe_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_name__text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/shoe_name__text_view"
            app:layout_constraintTop_toTopOf="@+id/shoe_name__text_view" />

        <TextView
            android:id="@+id/shoe_company__text_view"
            style="@style/ShoeDetailTextView"
            android:text="@string/shoe_company_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shoe_company__edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name__text_view"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/shoe_company__edit_text"
            style="@style/ShoeDetailEditText"
            android:hint="@string/shoe_company_hint"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_company__text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/shoe_company__text_view"
            app:layout_constraintStart_toStartOf="@+id/shoe_name__edit_text"
            app:layout_constraintTop_toTopOf="@+id/shoe_company__text_view" />

        <TextView
            android:id="@+id/shoe_size__text_view"
            style="@style/ShoeDetailTextView"
            android:text="@string/shoe_size_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shoe_size__edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company__text_view"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/shoe_size__edit_text"
            style="@style/ShoeDetailEditText"
            android:hint="@string/shoe_size_hint"
            android:inputType="number"
            android:text="2"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_size__text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/shoe_size__text_view"
            app:layout_constraintStart_toStartOf="@+id/shoe_company__edit_text"
            app:layout_constraintTop_toTopOf="@+id/shoe_size__text_view" />

        <TextView
            android:id="@+id/shoe_description__text_view"
            style="@style/ShoeDetailTextView"
            android:text="@string/shoe_description_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/shoe_description__edit_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size__text_view"
            app:layout_constraintVertical_bias="0.05" />

        <EditText
            android:id="@+id/shoe_description__edit_text"
            style="@style/ShoeDetailEditText"
            android:hint="@string/shoe_description_hint"
            android:inputType="number"
            app:layout_constraintBottom_toBottomOf="@+id/shoe_description__text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/shoe_description__text_view"
            app:layout_constraintStart_toStartOf="@+id/shoe_size__edit_text"
            app:layout_constraintTop_toTopOf="@+id/shoe_description__text_view" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="150dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel__button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/save__button"
            app:layout_constraintTop_toTopOf="@+id/save__button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/save__button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/cancel__button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>